# nlp-book-analysis

./: .gitignore  Makefile  Zabrodin_file_1.txt  Zabrodin_file_3.txt  extract.py  pyproject.toml  symbols.txt  test.py
lab01/: Zabrodin_file_1.txt  process.py
lab02/: Zabrodin_characters.csv  Zabrodin_characters_analysis.csv  Zabrodin_characters_filtered.csv  Zabrodin_file_4.txt  Zabrodin_file_5.ipynb  Zabrodin_file_6.ipynb
lab03/: Zabrodin_characters_tone_general.csv  Zabrodin_characters_tones_with_words.csv  Zabrodin_file_7.txt  Zabrodin_file_8.ipynb  Zabrodin_file_9.ipynb  Zabrodin_vocatives_filtered.txt  Zabrodin_vocatives_full.txt
lab04/: Zabrodin_chronology.txt  Zabrodin_file_10.ipynb  Zabrodin_file_11.ipynb  Zabrodin_subject_verb_object.csv
