[project]
name = "nlp-book-analysis"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
]
